# Aphrodite

./: .gitignore  README.md  pyproject.toml
.github/skills/tau-calibration/: SKILL.md
aphrodite/: __init__.py  asymmetric.py  calibration.py  datasets.py  fairness.py  graph.py  matching.py  matchmaker.py  metrics.py  ppr.py  preprocessing.py  profiles.py  reciprocal.py  similarity.py
aphrodite/embeddings/: __init__.py  base.py  lightweight.py  word2vec_bert.py
data/: sample_profiles.json  test_real.json
examples/: benchmark.py  calibrate_tau.py  compare_algorithms.py  run_matchmaking.py
tests/: test_aggregation.py  test_asymmetric.py  test_calibration.py  test_datasets.py  test_embeddings.py  test_fairness.py  test_gender.py  test_graph.py  test_matching.py  test_matchmaker.py  test_metrics.py  test_metrics_congestion.py  test_ppr.py  test_preprocessing.py  test_reciprocal.py  test_similarity.py
