[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aphrodite"
version = "0.1.0"
description = "Dating app matchmaking service based on Personalized PageRank (NLPIR 2023) and MINER (ACL 2022)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.23",
    "networkx>=3.0",
]

[project.optional-dependencies]
# Paper-faithful embedding backend (heavy: Word2Vec + BERT + torch).
full = [
    "gensim>=4.3",
    "sentence-transformers>=2.2",
    "nltk>=3.8",
    "scikit-learn>=1.2",
]
# Development / testing.
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["aphrodite*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
